# architecture

./: .dockerignore  .gitignore  Cargo.toml  Configure.toml  Dockerfile  docker-compose.yml  mydb.db  mydb.db-shm  mydb.db-wal
my_project/: Cargo.toml  Configure.toml  mydb.db  mydb.db-shm  mysql.db
my_project/migrations/: 20251227113013_init_table.sql  20251229071234_product.sql
my_project/src/: chapter1.rs  chapter2.rs  chapter3.rs  events.rs  handlers.rs  lib.rs  main.rs  messagebus.rs  services.rs
my_project/src/api_base/: api_doc.rs  api_errors.rs  mod.rs
my_project/src/auth/: auth_jwt.rs  auth_perm.rs  auth_user.rs  mod.rs
my_project/src/chapter1/: model.rs
my_project/src/configures/: database.rs  logger.rs  mod.rs  secretkey.rs  server.rs  sftppool.rs  smtppool.rs
my_project/src/entities/: allocations.rs  batches.rs  fake.rs  mod.rs  order_lines.rs  products.rs  scm_codemap.rs  scm_config.rs  ssm_codemap.rs  ssm_config.rs  uam_role.rs  uam_user.rs  uam_user_role.rs
my_project/src/from/: login_from_req.rs  mod.rs  security_from_req.rs
my_project/src/logic/: authenticator.rs  mod.rs
my_project/src/logic/common/: mod.rs
my_project/src/logic/uam/: mod.rs
my_project/src/repositories/: fake.rs  mod.rs
my_project/src/sitemaps/: app_state.rs  authenticator.rs  csp_layer.rs  mod.rs
my_project/src/tokens/: auth_perm.rs  mod.rs
my_project/src/web_base/: mod.rs
my_project/static/plugins/DataTables/: datatables.css  datatables.min.css
my_project/templates/: error.html  index.html  login.html
my_project/templates/layout/: main.html  media.html  script.html
my_project/tests/: test_api.rs  test_batches.rs  test_orm.rs  test_repository.rs  test_sync.rs
my_project/tests/e2e/: mod.rs  test_api.rs
my_project/tests/integration/: mod.rs  test_orm.rs  test_repository.rs  test_uow.rs
my_project/tests/unit/: mod.rs  test_batches.rs
sql_derives/: Cargo.toml
sql_derives/src/: lib.rs
sql_derives/tests/: test_derive.rs
src/: lib.rs  main.rs  sitemap.rs
src/api_base/: api_errors.rs  mod.rs
src/chapter1/: model.rs
src/chapter2/: sync.rs
src/chapters/: model.rs
src/configures/: application.rs  database.rs  dbconfig.rs  mod.rs  secretkey.rs  sftppool.rs  smtppool.rs
src/entities/: allocations.rs  batches.rs  fake.rs  mod.rs  order_lines.rs  ssm_codemap.rs  ssm_config.rs  uam_user.rs  uam_user_role.rs
src/logic/: authenticator.rs  mod.rs  security_form.rs  security_from_req.rs
src/logic/common/: mod.rs
src/repositories/: repository.rs
src/sitemaps/: apiErrors.rs  apiResponse.rs  api_errors.rs  api_response.rs  app_state.rs  mod.rs  webErrors.rs  webResponse.rs  web_errors.rs  web_response.rs
src/tokens/: jwt.rs
src/web_base/: web_errors.rs
static/plugins/DataTables/: datatables.js  datatables.min.js
templates/: error.html
tests/: test_batches.rs  test_orm.rs  test_repository.rs
tests/source/: file2.txt
