[package]
name = "architecture"
version = "0.1.0"
edition = "2024"

[dependencies]

chrono = "0.4"

config = { version = "0.15", features = ["toml"] }

rbs = "4.6"
rbatis = { version = "4.6", features = ["debug_mode"] }
rbdc-sqlite = "4.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha2 = "0.10"

axum = "0.8"
axum-valid = "0.24"

tokio = { version = "1.40", features = ["full"] }
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

uuid = { version = "1.4", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }

walkdir = "2.3"
