[package]
name = "architecture"
version = "0.1.0"
edition = "2024"

[dependencies]

chrono = { version = "0.4", features = ["serde"] }

config = { version = "0.15", features = ["toml"] }

fast_log = "1.7"
log = "0.4"

jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

lettre = "0.11"

rbs = "4.6"
rbatis = { version = "4.6", features = ["debug_mode"] }
rbdc-sqlite = "4.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha2 = "0.10"

anyhow = "1.0"

askama = { version = "0.14", features = ["full"] }

axum = "0.8"
axum-valid = "0.24"

#russh = "0.54"
#russh-sftp = "2.1.1"

thiserror = "2.0"

tokio = { version = "1.40", features = ["full"] }
tokio-cron-scheduler = "0.15"

tower-http = { version = "0.6", features = ["full"] }

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

xid = "1.1"
validator = { version = "0.20", features = ["derive"] }

walkdir = "2.3"
