[package]
name = "architecture"
version = "0.1.0"
edition = "2024"

[dependencies]

base64 = "0.22"

chrono = { version = "0.4", features = ["serde"] }

config = { version = "0.15", features = ["toml"] }

sql_derives = { path = "../sql_derives" }

jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

lettre = "0.11"

reqwest = { version = "0.12", features = ["json"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "derive",
    "chrono",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha2 = "0.10"

anyhow = "1.0"

askama = { version = "0.14", features = ["full"] }

axum = "0.8"
axum-valid = "0.24"

russh = "0.55"
russh-sftp = "2.1"

thiserror = "2.0"

tokio = { version = "1.40", features = ["full"] }
tokio-cron-scheduler = "0.15"

tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tower-sessions = "0.14"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = "9.0"

xid = "1.1"
validator = { version = "0.20", features = ["derive"] }

walkdir = "2.3"
