[package]
name = "architecture"
version = "0.1.0"
edition = "2024"

[dependencies]
# A
anyhow = "1.0"

axum = { version = "0.8", features = ["macros"] }
# B
base64 = "0.22"
# C
chrono = { version = "0.4", features = ["serde"] }

config = { version = "0.15", features = ["toml"] }
# D
# E
# F
# G
# H
http-body-util = "0.1"
# I
# J
# K
# L
# M
# N
# O
# P
# Q
# R
# S
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha2 = "0.10"

sql_derives = { path = "../sql_derives" }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "derive",
    "chrono",
] }
# T
thiserror = "2.0"

tokio = { version = "1.40", features = ["full"] }

tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# U
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
# V
# W
walkdir = "2.3"
# X
xid = "1.1"
# Y
# Z
